--- a/ansible/playbooks/tasks/devToolchain.yml
+++ b/ansible/playbooks/tasks/devToolchain.yml
@@ -15,18 +15,17 @@
     toolchain_target_user: "{{ lookup('env', 'SUDO_USER') | default(ansible_user, true) }}"
 
 - name: Resolve toolchain user account details
-  ansible.builtin.command:
-    cmd: >-
-      python3 -c "import pwd; p = pwd.getpwnam('{{ toolchain_target_user }}');
-      print(f'{p.pw_dir}:{p.pw_gid}')"
+  ansible.builtin.getent:
+    database: passwd
+    key: "{{ toolchain_target_user }}"
   register: toolchain_user_account_details
   changed_when: false
   become: false
 
 - name: Set toolchain user home/group facts
   ansible.builtin.set_fact:
-    toolchain_user_home: "{{ toolchain_user_account_details.stdout.split(':')[0] }}"
-    toolchain_user_group: "{{ toolchain_user_account_details.stdout.split(':')[1] }}"
+    toolchain_user_home: "{{ toolchain_user_account_details.ansible_facts.getent_passwd[toolchain_target_user][4] }}"
+    toolchain_user_group: "{{ toolchain_user_account_details.ansible_facts.getent_passwd[toolchain_target_user][2] }}"
 
 - name: Update apt cache and upgrade all packages
   ansible.builtin.apt:
@@ -64,17 +63,10 @@
 
 - name: Install dev packages via Homebrew on macOS
   ansible.builtin.command:
-    cmd: "brew install {{ item }}"
-  loop:
-    - fd
-    - ripgrep
-    - gnupg
-    - automake
-    - autoconf
-    - ncurses
+    cmd: "brew install fd ripgrep gnupg automake autoconf ncurses"
   become: false
   register: brew_install_result
-  changed_when: false
+  changed_when: "'already installed' not in brew_install_result.stdout"
   when: toolchain_is_darwin
 
 # On Debian/Ubuntu, fd-find installs the binary as 'fdfind'.
@@ -187,14 +179,14 @@
     path: "{{ toolchain_user_home }}/.config/nvim"
     state: directory
     mode: "0755"
-    owner: "{{ ansible_user }}"
+    owner: "{{ toolchain_target_user }}"
     group: "{{ toolchain_user_group }}"
 
 - name: Deploy Neovim configuration
   ansible.builtin.copy:
     src: "{{ playbook_dir }}/../../tuxedo/config/neovim.lua"
     dest: "{{ toolchain_user_home }}/.config/nvim/init.lua"
-    owner: "{{ ansible_user }}"
+    owner: "{{ toolchain_target_user }}"
     group: "{{ toolchain_user_group }}"
     mode: "0644"
 
@@ -267,7 +259,7 @@
     path: "{{ toolchain_user_home }}/.terminfo/t"
     state: directory
     mode: "0755"
-    owner: "{{ ansible_user }}"
+    owner: "{{ toolchain_target_user }}"
     group: "{{ toolchain_user_group }}"
 
 # tmux-256color with truecolor support (required for Claude Code colors in screen/tmux)
@@ -289,7 +281,7 @@
   ansible.builtin.command:
     cmd: "tic -x -o {{ toolchain_user_home }}/.terminfo /tmp/ghostty-user.terminfo"
   become: true
-  become_user: "{{ ansible_user }}"
+  become_user: "{{ toolchain_target_user }}"
   when: toolchain_is_darwin and (copy_ghostty_user_terminfo_result.changed or not compiled_ghostty_user_terminfo_stat.stat.exists)
   changed_when: true
 
@@ -309,7 +301,7 @@
   ansible.builtin.command:
     cmd: "tic -x -o {{ toolchain_user_home }}/.terminfo /tmp/tmux-256color-tc.terminfo"
   become: true
-  become_user: "{{ ansible_user }}"
+  become_user: "{{ toolchain_target_user }}"
   when: copy_tmux_terminfo_result.changed or not compiled_tmux_terminfo_stat.stat.exists
   changed_when: true
 
