--- a/ansible/playbooks/tasks/tuxedoCliEnvironment.yml
+++ b/ansible/playbooks/tasks/tuxedoCliEnvironment.yml
@@ -2,19 +2,20 @@
   ansible.builtin.set_fact:
     cli_user_home: "{{ ansible_facts.user_dir | default(lookup('env', 'HOME')) }}"
     cli_user_group: "{{ (ansible_facts.user_gid | default(lookup('pipe', 'id -g'))) | string }}"
+    cli_user_owner: "{{ ansible_facts.user_id | default(ansible_user) }}"
 
 - name: Ensure Claude Code config directory exists
   ansible.builtin.file:
     path: "{{ cli_user_home }}/.claude"
     state: directory
     mode: "0700"
-    owner: "{{ ansible_user }}"
+    owner: "{{ cli_user_owner }}"
     group: "{{ cli_user_group }}"
 
 - name: Configure Claude Code dark theme
   ansible.builtin.copy:
     dest: "{{ cli_user_home }}/.claude.json"
-    owner: "{{ ansible_user }}"
+    owner: "{{ cli_user_owner }}"
     group: "{{ cli_user_group }}"
     mode: "0600"
     force: false
