fix(k8s): wire openrouter secret in staging api
Render staging secrets from environment before apply, inject OPENROUTER_API_KEY into API deployment, and add a helper script to inspect API env visibility in-cluster.

--- a/terraform/stacks/staging/k8s/manifests/api.yaml
+++ b/terraform/stacks/staging/k8s/manifests/api.yaml
@@ -30,6 +30,11 @@ spec:
                 secretKeyRef:
                   name: tearleads-secrets
                   key: JWT_SECRET
+            - name: OPENROUTER_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: OPENROUTER_API_KEY
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
