--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/secrets.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/secrets.yaml
@@ -6,6 +6,7 @@ metadata:
 type: Opaque
 stringData:
   JWT_SECRET: "${JWT_SECRET}"
+  OPENROUTER_API_KEY: "${OPENROUTER_API_KEY}"
   POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
   # Garage / VFS Blob Storage credentials
   GARAGE_RPC_SECRET: "${GARAGE_RPC_SECRET}"
