--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:email": "pnpm --filter @tearleads/email build",
     "build:calendar": "pnpm --filter @tearleads/calendar build",
     "build:health": "pnpm --filter @tearleads/health build",
-    "dev": "FORCE_COLOR=0 tsx scripts/killPnpmDev.ts --force && FORCE_COLOR=0 VITE_API_URL=http://localhost:5001/v1 pnpm buildPreDev && FORCE_COLOR=0 pnpm --filter @tearleads/api buildOpenapi && FORCE_COLOR=0 tsx scripts/checkSmtpPort.ts && FORCE_COLOR=0 TEARLEADS_SKIP_DEV_KILL=1 concurrently -n api,client,website,smtp -c blue,magenta,cyan,green \"FORCE_COLOR=0 pnpm --filter @tearleads/api dev\" \"FORCE_COLOR=0 pnpm --filter @tearleads/client dev\" \"FORCE_COLOR=0 pnpm --filter @tearleads/website dev\" \"FORCE_COLOR=0 pnpm --filter @tearleads/smtp-listener dev\"",
+    "dev": "FORCE_COLOR=0 tsx scripts/killPnpmDev.ts --force && FORCE_COLOR=0 VITE_API_URL=http://localhost:5001/v1 pnpm buildPreDev && FORCE_COLOR=0 pnpm --filter @tearleads/api buildOpenapi && FORCE_COLOR=0 tsx scripts/lib/checkSmtpPort.ts && FORCE_COLOR=0 TEARLEADS_SKIP_DEV_KILL=1 concurrently -n api,client,website,smtp -c blue,magenta,cyan,green \"FORCE_COLOR=0 pnpm --filter @tearleads/api dev\" \"FORCE_COLOR=0 pnpm --filter @tearleads/client dev\" \"FORCE_COLOR=0 pnpm --filter @tearleads/website dev\" \"FORCE_COLOR=0 pnpm --filter @tearleads/smtp-listener dev\"",
     "dev:api": "FORCE_COLOR=0 pnpm build:shared && FORCE_COLOR=0 pnpm build:db && FORCE_COLOR=0 pnpm --filter @tearleads/api dev",
     "dev:client": "FORCE_COLOR=0 VITE_API_URL=http://localhost:5001/v1 pnpm buildPreDev && FORCE_COLOR=0 pnpm --filter @tearleads/client dev",
     "devWebsite": "FORCE_COLOR=0 pnpm --filter @tearleads/api buildOpenapi && FORCE_COLOR=0 pnpm --filter @tearleads/website dev",
@@ -38,11 +38,11 @@
     "clean": "pnpm -r clean",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "lint:scripts": "sh -c 'set -eu; files=\"scripts/*.sh scripts/preen/*.sh\"; extra=\"\"; if [ -d ansible/playbooks/files/scripts ]; then extra=$(find ansible/playbooks/files/scripts -maxdepth 1 -type f -name \"*.sh\" -print); fi; shellcheck --severity=info $files $extra' && pnpm --filter @tearleads/client lint:scripts",
+    "lint:scripts": "sh -c 'set -eu; files=\"scripts/*.sh scripts/checks/*.sh scripts/preen/*.sh\"; extra=\"\"; if [ -d ansible/playbooks/files/scripts ]; then extra=$(find ansible/playbooks/files/scripts -maxdepth 1 -type f -name \"*.sh\" -print); fi; shellcheck --severity=info $files $extra' && pnpm --filter @tearleads/client lint:scripts",
     "lint:rubocop": "pnpm --filter @tearleads/client lint:rubocop",
     "lint:ansible": "ansible-lint ansible/ terraform/stacks/staging/tee/ansible/ terraform/stacks/prod/tee/ansible/",
     "lint:md": "markdownlint-cli2 '**/*.md'",
-    "lint:actions": "./scripts/checkGithubActions.sh",
+    "lint:actions": "./scripts/checks/checkGithubActions.sh",
     "lint:knip": "knip --config knip.ts --use-tsconfig-files",
     "lint:knip:fix": "knip -n --config knip.ts --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checkPreenEcosystem.sh --strict",
