--- a/terraform/stacks/staging/k8s/manifests/kustomize/base/api.yaml
+++ b/terraform/stacks/staging/k8s/manifests/kustomize/base/api.yaml
@@ -54,6 +54,8 @@ spec:
               value: smtp-listener
             - name: SMTP_PORT
               value: "25"
+            - name: EMAIL_STORAGE_BACKEND
+              value: "vfs"
           resources:
             requests:
               memory: "128Mi"
