--- a/terraform/stacks/prod/k8s/manifests/api.yaml
+++ b/terraform/stacks/prod/k8s/manifests/api.yaml
@@ -44,13 +44,13 @@ spec:
               cpu: "500m"
           readinessProbe:
             httpGet:
-              path: /health
+              path: /v1/ping
               port: 5001
             initialDelaySeconds: 10
             periodSeconds: 5
           livenessProbe:
             httpGet:
-              path: /health
+              path: /v1/ping
               port: 5001
             initialDelaySeconds: 30
             periodSeconds: 10
