feat: add bob-and-alice integration test package
Extract account seeding from API testHarness to db-test-utils
for reuse. Create packages/bob-and-alice with harness classes
(ServerHarness, ActorHarness, ScenarioHarness) and three
integration test scenarios: note sharing, bidirectional sync,
and CRDT conflict resolution.

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -46,6 +46,7 @@
     "swagger-jsdoc": "6.2.8"
   },
   "devDependencies": {
+    "@tearleads/db-test-utils": "workspace:*",
     "@types/cors": "2.8.19",
     "@types/express": "5.0.6",
     "@types/jsonwebtoken": "9.0.10",
