feat(prod-rds): bootstrap RDS stack with secrets, VPC, and deploy integration
Wire prod RDS scripts to load .secrets/env and bridge POSTGRES_PASSWORD
to TF_VAR_postgres_password. Replace default VPC lookup with dedicated
VPC and subnets. Pull k8s server IP from remote state for security
group CIDR. Add SSL support to pg pool config via POSTGRES_SSL env var.
Render configmap.yaml and secrets.yaml via envsubst at deploy time so
no infrastructure-specific values are committed to source control.
Add prod migrate.sh, smoke-postgres.sh, and unlock.sh scripts.

--- a/terraform/stacks/prod/k8s/manifests/configmap.yaml
+++ b/terraform/stacks/prod/k8s/manifests/configmap.yaml
@@ -6,9 +6,10 @@ metadata:
 data:
   NODE_ENV: "production"
   PORT: "5001"
-  # RDS endpoint - get from: terraform -chdir=terraform/stacks/prod/rds output address
-  POSTGRES_HOST: "tearleads-prod.xxxxx.us-east-1.rds.amazonaws.com"
+  # RDS endpoint - rendered at deploy time from terraform output
+  POSTGRES_HOST: "${POSTGRES_HOST}"
   POSTGRES_PORT: "5432"
   POSTGRES_USER: "postgres"
   POSTGRES_DATABASE: "tearleads"
+  POSTGRES_SSL: "1"
   REDIS_URL: "redis://redis:6379"
