--- a/ansible/playbooks/tasks/devToolchain.yml
+++ b/ansible/playbooks/tasks/devToolchain.yml
@@ -422,6 +422,12 @@
     global: true
     state: present
 
+- name: Install Google Gemini CLI
+  community.general.npm:
+    name: "@google/gemini-cli"
+    global: true
+    state: present
+
 # Ghostty terminal emulator
 - name: Check if Ghostty is installed
   ansible.builtin.command:
