feat(infra): add prod S3 and OpenRouter
New terraform stack prod/s3 with S3 bucket, IAM user, and scoped
policy. Wire VFS_BLOB_S3_* and OPENROUTER_API_KEY into prod k8s
configmap, secrets, api deployment, and deploy script.

--- a/terraform/stacks/prod/k8s/manifests/api.yaml
+++ b/terraform/stacks/prod/k8s/manifests/api.yaml
@@ -30,11 +30,26 @@ spec:
                 secretKeyRef:
                   name: tearleads-secrets
                   key: JWT_SECRET
+            - name: OPENROUTER_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: OPENROUTER_API_KEY
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: tearleads-secrets
                   key: POSTGRES_PASSWORD
+            - name: VFS_BLOB_S3_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: VFS_BLOB_S3_ACCESS_KEY_ID
+            - name: VFS_BLOB_S3_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: tearleads-secrets
+                  key: VFS_BLOB_S3_SECRET_ACCESS_KEY
           resources:
             requests:
               memory: "128Mi"
