--- a/terraform/stacks/prod/k8s/manifests/secrets.yaml
+++ b/terraform/stacks/prod/k8s/manifests/secrets.yaml
@@ -6,4 +6,7 @@ metadata:
 type: Opaque
 stringData:
   JWT_SECRET: "${JWT_SECRET}"
+  OPENROUTER_API_KEY: "${OPENROUTER_API_KEY}"
   POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+  VFS_BLOB_S3_ACCESS_KEY_ID: "${VFS_BLOB_S3_ACCESS_KEY_ID}"
+  VFS_BLOB_S3_SECRET_ACCESS_KEY: "${VFS_BLOB_S3_SECRET_ACCESS_KEY}"
