--- a/terraform/stacks/prod/k8s/manifests/configmap.yaml
+++ b/terraform/stacks/prod/k8s/manifests/configmap.yaml
@@ -13,3 +13,7 @@ data:
   POSTGRES_DATABASE: "tearleads"
   POSTGRES_SSL: "1"
   REDIS_URL: "redis://redis:6379"
+  # VFS Blob Storage (AWS S3)
+  VFS_BLOB_STORE_PROVIDER: "s3"
+  VFS_BLOB_S3_BUCKET: "${VFS_BLOB_S3_BUCKET}"
+  VFS_BLOB_S3_REGION: "us-east-1"
