refactor(infra): unify domain var name
Rename TF_VAR_staging_domain and TF_VAR_production_domain to
TF_VAR_domain. Each tier env file now provides the domain for
its environment, eliminating the need for tier-prefixed names
across Terraform, shell scripts, CI, and Ansible.

--- a/.github/workflows/publish-staging-containers.yml
+++ b/.github/workflows/publish-staging-containers.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       AWS_REGION: us-east-1
       DOCKER_BUILD_PLATFORM: linux/amd64
-      TF_VAR_staging_domain: ${{ secrets.DEPLOY_DOMAIN }}
+      TF_VAR_domain: ${{ secrets.DEPLOY_DOMAIN }}
 
     steps:
       - uses: actions/checkout@v4
