test(qa): migrate secure upload QA suite

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "build": "pnpm -r build",
     "enforceTypeScriptIncrementalBuilds": "./scripts/checks/enforceTypeScriptIncrementalBuilds.ts",
     "test": "pnpm -r test && pnpm test:tuxedo",
-    "qaVfsSecureUpload": "tsx scripts/qa/vfsSecureUploadReadiness.ts",
-    "qaVfsSecureUploadEvidence": "tsx scripts/qa/vfsSecureUploadReadiness.ts --continue-on-failure --report-json coverage/qa/vfsSecureUploadReadiness.json --report-markdown coverage/qa/vfsSecureUploadReadiness.md",
-    "testVfsSecureUploadReadiness": "tsx --test scripts/qa/vfsSecureUploadReadiness.test.ts",
+    "qaVfsSecureUploadTestSuite": "tsx packages/bob-and-alice/src/qa/runVfsSecureUploadQaSuite.ts",
+    "qaVfsSecureUploadTestEvidence": "tsx packages/bob-and-alice/src/qa/runVfsSecureUploadQaSuite.ts --continue-on-failure --report-json coverage/qa/vfsSecureUploadQaSuite.json --report-markdown coverage/qa/vfsSecureUploadQaSuite.md",
+    "testVfsSecureUploadQaSuite": "pnpm --filter @tearleads/bob-and-alice test -- src/qa/vfsSecureUploadQaSuite.test.ts",
     "test:tuxedo": "sh ./tuxedo/tests/run.sh",
     "test:coverage": "sh ./tuxedo/tests/coverage.sh",
     "clean": "pnpm -r clean",
