--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,6 +17,7 @@
     "build:cli": "esbuild src/apiCli.ts --bundle --platform=node --target=node22 --format=cjs --outfile=dist/apiCli.cjs --minify --sourcemap",
     "build:all": "rm -rf dist && pnpm build:bundle && pnpm build:cli",
     "cli": "tsx src/apiCli.ts",
+    "vfsCrdtCompaction": "tsx src/apiCli.ts vfs-crdt-compaction",
     "deleteAccount": "tsx scripts/deleteAccount.ts",
     "start": "node dist/server.cjs",
     "clean": "rm -rf dist",
