--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -247,6 +247,8 @@ jobs:
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             BASE_SHA="${{ github.event.pull_request.base.sha }}"
             HEAD_SHA="${{ github.event.pull_request.head.sha }}"
+            git fetch --no-tags --prune --depth=1 origin "$BASE_SHA" || true
+            git fetch --no-tags --prune --depth=1 origin "$HEAD_SHA" || true
           else
             HEAD_SHA="${{ github.sha }}"
             git fetch --no-tags --prune --depth=2 origin "$HEAD_SHA" || true
